YAPL2Parser.py
# Generated from YAPL2.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPL2Parser ( Parser ):

    grammarFileName = "YAPL2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "'let'", "'*'", "'/'", "'+'", 
                     "'-'", "'~'", "'<'", "'<='", "'='", "<INVALID>", "<INVALID>", 
                     "'false'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<-'", "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "ELSE", 
                      "FALSE", "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", 
                      "LOOP", "POOL", "THEN", "WHILE", "NEW", "NOT", "TRUE", 
                      "STRINGS", "INTEGERS", "TYPEID", "OBJECTID", "ASIGNOPP", 
                      "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_programBlock = 1
    RULE_classDEF = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_expr = 5

    ruleNames =  [ "program", "programBlock", "classDEF", "feature", "formal", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    CLASS=19
    ELSE=20
    FALSE=21
    FI=22
    IF=23
    IN=24
    INHERITS=25
    ISVOID=26
    LET=27
    LOOP=28
    POOL=29
    THEN=30
    WHILE=31
    NEW=32
    NOT=33
    TRUE=34
    STRINGS=35
    INTEGERS=36
    TYPEID=37
    OBJECTID=38
    ASIGNOPP=39
    OPEN_COMMENT=40
    CLOSE_COMMENT=41
    COMMENT=42
    ONE_LINE_COMMENT=43
    WHITESPACE=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programBlock(self):
            return self.getTypedRuleContext(YAPL2Parser.ProgramBlockContext,0)


        def EOF(self):
            return self.getToken(YAPL2Parser.EOF, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPL2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.programBlock()
            self.state = 13
            self.match(YAPL2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDEF(self):
            return self.getTypedRuleContext(YAPL2Parser.ClassDEFContext,0)


        def programBlock(self):
            return self.getTypedRuleContext(YAPL2Parser.ProgramBlockContext,0)


        def EOF(self):
            return self.getToken(YAPL2Parser.EOF, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_programBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramBlock" ):
                listener.enterProgramBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramBlock" ):
                listener.exitProgramBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramBlock" ):
                return visitor.visitProgramBlock(self)
            else:
                return visitor.visitChildren(self)




    def programBlock(self):

        localctx = YAPL2Parser.ProgramBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programBlock)
        try:
            self.state = 20
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YAPL2Parser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.classDEF()
                self.state = 16
                self.match(YAPL2Parser.T__0)
                self.state = 17
                self.programBlock()
                pass
            elif token in [YAPL2Parser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 19
                self.match(YAPL2Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDEFContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPL2Parser.CLASS, 0)

        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.TYPEID)
            else:
                return self.getToken(YAPL2Parser.TYPEID, i)

        def INHERITS(self):
            return self.getToken(YAPL2Parser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPL2Parser.RULE_classDEF

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDEF" ):
                listener.enterClassDEF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDEF" ):
                listener.exitClassDEF(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDEF" ):
                return visitor.visitClassDEF(self)
            else:
                return visitor.visitChildren(self)




    def classDEF(self):

        localctx = YAPL2Parser.ClassDEFContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDEF)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(YAPL2Parser.CLASS)
            self.state = 23
            self.match(YAPL2Parser.TYPEID)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPL2Parser.INHERITS:
                self.state = 24
                self.match(YAPL2Parser.INHERITS)
                self.state = 25
                self.match(YAPL2Parser.TYPEID)


            self.state = 28
            self.match(YAPL2Parser.T__1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPL2Parser.OBJECTID:
                self.state = 29
                self.feature()
                self.state = 30
                self.match(YAPL2Parser.T__0)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(YAPL2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPL2Parser.ExprContext,0)


        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.FormalContext,i)


        def ASIGNOPP(self):
            return self.getToken(YAPL2Parser.ASIGNOPP, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = YAPL2Parser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(YAPL2Parser.OBJECTID)
                self.state = 40
                self.match(YAPL2Parser.T__3)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPL2Parser.OBJECTID:
                    self.state = 41
                    self.formal()
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPL2Parser.T__4:
                        self.state = 42
                        self.match(YAPL2Parser.T__4)
                        self.state = 43
                        self.formal()
                        self.state = 48
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 51
                self.match(YAPL2Parser.T__5)
                self.state = 52
                self.match(YAPL2Parser.T__6)
                self.state = 53
                self.match(YAPL2Parser.TYPEID)
                self.state = 54
                self.match(YAPL2Parser.T__1)
                self.state = 55
                self.expr(0)
                self.state = 56
                self.match(YAPL2Parser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(YAPL2Parser.OBJECTID)
                self.state = 59
                self.match(YAPL2Parser.T__6)
                self.state = 60
                self.match(YAPL2Parser.TYPEID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPL2Parser.ASIGNOPP:
                    self.state = 61
                    self.match(YAPL2Parser.ASIGNOPP)
                    self.state = 62
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self):
            return self.getToken(YAPL2Parser.OBJECTID, 0)

        def TYPEID(self):
            return self.getToken(YAPL2Parser.TYPEID, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = YAPL2Parser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(YAPL2Parser.OBJECTID)
            self.state = 68
            self.match(YAPL2Parser.T__6)
            self.state = 69
            self.match(YAPL2Parser.TYPEID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.OBJECTID)
            else:
                return self.getToken(YAPL2Parser.OBJECTID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPL2Parser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPL2Parser.ExprContext,i)


        def IF(self):
            return self.getToken(YAPL2Parser.IF, 0)

        def THEN(self):
            return self.getToken(YAPL2Parser.THEN, 0)

        def ELSE(self):
            return self.getToken(YAPL2Parser.ELSE, 0)

        def FI(self):
            return self.getToken(YAPL2Parser.FI, 0)

        def WHILE(self):
            return self.getToken(YAPL2Parser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YAPL2Parser.LOOP, 0)

        def POOL(self):
            return self.getToken(YAPL2Parser.POOL, 0)

        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.TYPEID)
            else:
                return self.getToken(YAPL2Parser.TYPEID, i)

        def IN(self):
            return self.getToken(YAPL2Parser.IN, 0)

        def ASIGNOPP(self, i:int=None):
            if i is None:
                return self.getTokens(YAPL2Parser.ASIGNOPP)
            else:
                return self.getToken(YAPL2Parser.ASIGNOPP, i)

        def NEW(self):
            return self.getToken(YAPL2Parser.NEW, 0)

        def ISVOID(self):
            return self.getToken(YAPL2Parser.ISVOID, 0)

        def NOT(self):
            return self.getToken(YAPL2Parser.NOT, 0)

        def INTEGERS(self):
            return self.getToken(YAPL2Parser.INTEGERS, 0)

        def STRINGS(self):
            return self.getToken(YAPL2Parser.STRINGS, 0)

        def TRUE(self):
            return self.getToken(YAPL2Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPL2Parser.FALSE, 0)

        def getRuleIndex(self):
            return YAPL2Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPL2Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 72
                self.match(YAPL2Parser.OBJECTID)
                self.state = 73
                self.match(YAPL2Parser.T__3)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPL2Parser.T__1) | (1 << YAPL2Parser.T__3) | (1 << YAPL2Parser.T__9) | (1 << YAPL2Parser.T__14) | (1 << YAPL2Parser.FALSE) | (1 << YAPL2Parser.IF) | (1 << YAPL2Parser.ISVOID) | (1 << YAPL2Parser.WHILE) | (1 << YAPL2Parser.NEW) | (1 << YAPL2Parser.NOT) | (1 << YAPL2Parser.TRUE) | (1 << YAPL2Parser.STRINGS) | (1 << YAPL2Parser.INTEGERS) | (1 << YAPL2Parser.OBJECTID))) != 0):
                    self.state = 74
                    self.expr(0)
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPL2Parser.T__4:
                        self.state = 75
                        self.match(YAPL2Parser.T__4)
                        self.state = 76
                        self.expr(0)
                        self.state = 81
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 84
                self.match(YAPL2Parser.T__5)
                pass

            elif la_ == 2:
                self.state = 85
                self.match(YAPL2Parser.IF)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(YAPL2Parser.THEN)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(YAPL2Parser.ELSE)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(YAPL2Parser.FI)
                pass

            elif la_ == 3:
                self.state = 93
                self.match(YAPL2Parser.WHILE)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(YAPL2Parser.LOOP)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(YAPL2Parser.POOL)
                pass

            elif la_ == 4:
                self.state = 99
                self.match(YAPL2Parser.T__1)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPL2Parser.T__1) | (1 << YAPL2Parser.T__3) | (1 << YAPL2Parser.T__9) | (1 << YAPL2Parser.T__14) | (1 << YAPL2Parser.FALSE) | (1 << YAPL2Parser.IF) | (1 << YAPL2Parser.ISVOID) | (1 << YAPL2Parser.WHILE) | (1 << YAPL2Parser.NEW) | (1 << YAPL2Parser.NOT) | (1 << YAPL2Parser.TRUE) | (1 << YAPL2Parser.STRINGS) | (1 << YAPL2Parser.INTEGERS) | (1 << YAPL2Parser.OBJECTID))) != 0):
                    self.state = 100
                    self.expr(0)
                    self.state = 101
                    self.match(YAPL2Parser.T__0)
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 108
                self.match(YAPL2Parser.T__2)
                pass

            elif la_ == 5:
                self.state = 109
                self.match(YAPL2Parser.T__9)
                self.state = 110
                self.match(YAPL2Parser.OBJECTID)
                self.state = 111
                self.match(YAPL2Parser.T__6)
                self.state = 112
                self.match(YAPL2Parser.TYPEID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPL2Parser.ASIGNOPP:
                    self.state = 113
                    self.match(YAPL2Parser.ASIGNOPP)
                    self.state = 114
                    self.expr(0)


                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YAPL2Parser.T__4:
                    self.state = 117
                    self.match(YAPL2Parser.T__4)
                    self.state = 118
                    self.match(YAPL2Parser.OBJECTID)
                    self.state = 119
                    self.match(YAPL2Parser.T__6)
                    self.state = 120
                    self.match(YAPL2Parser.TYPEID)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==YAPL2Parser.ASIGNOPP:
                        self.state = 121
                        self.match(YAPL2Parser.ASIGNOPP)
                        self.state = 122
                        self.expr(0)


                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 130
                self.match(YAPL2Parser.IN)
                self.state = 131
                self.expr(19)
                pass

            elif la_ == 6:
                self.state = 132
                self.match(YAPL2Parser.NEW)
                self.state = 133
                self.match(YAPL2Parser.TYPEID)
                pass

            elif la_ == 7:
                self.state = 134
                self.match(YAPL2Parser.ISVOID)
                self.state = 135
                self.expr(17)
                pass

            elif la_ == 8:
                self.state = 136
                self.match(YAPL2Parser.T__14)
                self.state = 137
                self.expr(12)
                pass

            elif la_ == 9:
                self.state = 138
                self.match(YAPL2Parser.NOT)
                self.state = 139
                self.expr(8)
                pass

            elif la_ == 10:
                self.state = 140
                self.match(YAPL2Parser.T__3)
                self.state = 141
                self.expr(0)
                self.state = 142
                self.match(YAPL2Parser.T__5)
                pass

            elif la_ == 11:
                self.state = 144
                self.match(YAPL2Parser.OBJECTID)
                pass

            elif la_ == 12:
                self.state = 145
                self.match(YAPL2Parser.INTEGERS)
                pass

            elif la_ == 13:
                self.state = 146
                self.match(YAPL2Parser.STRINGS)
                pass

            elif la_ == 14:
                self.state = 147
                self.match(YAPL2Parser.TRUE)
                pass

            elif la_ == 15:
                self.state = 148
                self.match(YAPL2Parser.FALSE)
                pass

            elif la_ == 16:
                self.state = 149
                self.match(YAPL2Parser.OBJECTID)
                self.state = 150
                self.match(YAPL2Parser.ASIGNOPP)
                self.state = 151
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 196
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 194
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 154
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 155
                        self.match(YAPL2Parser.T__10)
                        self.state = 156
                        self.expr(17)
                        pass

                    elif la_ == 2:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 157
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 158
                        self.match(YAPL2Parser.T__11)
                        self.state = 159
                        self.expr(16)
                        pass

                    elif la_ == 3:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 160
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 161
                        self.match(YAPL2Parser.T__12)
                        self.state = 162
                        self.expr(15)
                        pass

                    elif la_ == 4:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 163
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 164
                        self.match(YAPL2Parser.T__13)
                        self.state = 165
                        self.expr(14)
                        pass

                    elif la_ == 5:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 166
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 167
                        self.match(YAPL2Parser.T__15)
                        self.state = 168
                        self.expr(12)
                        pass

                    elif la_ == 6:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 169
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 170
                        self.match(YAPL2Parser.T__16)
                        self.state = 171
                        self.expr(11)
                        pass

                    elif la_ == 7:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 172
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 173
                        self.match(YAPL2Parser.T__17)
                        self.state = 174
                        self.expr(10)
                        pass

                    elif la_ == 8:
                        localctx = YAPL2Parser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 175
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 178
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==YAPL2Parser.T__7:
                            self.state = 176
                            self.match(YAPL2Parser.T__7)
                            self.state = 177
                            self.match(YAPL2Parser.TYPEID)


                        self.state = 180
                        self.match(YAPL2Parser.T__8)
                        self.state = 181
                        self.match(YAPL2Parser.OBJECTID)
                        self.state = 182
                        self.match(YAPL2Parser.T__3)
                        self.state = 191
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPL2Parser.T__1) | (1 << YAPL2Parser.T__3) | (1 << YAPL2Parser.T__9) | (1 << YAPL2Parser.T__14) | (1 << YAPL2Parser.FALSE) | (1 << YAPL2Parser.IF) | (1 << YAPL2Parser.ISVOID) | (1 << YAPL2Parser.WHILE) | (1 << YAPL2Parser.NEW) | (1 << YAPL2Parser.NOT) | (1 << YAPL2Parser.TRUE) | (1 << YAPL2Parser.STRINGS) | (1 << YAPL2Parser.INTEGERS) | (1 << YAPL2Parser.OBJECTID))) != 0):
                            self.state = 183
                            self.expr(0)
                            self.state = 188
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==YAPL2Parser.T__4:
                                self.state = 184
                                self.match(YAPL2Parser.T__4)
                                self.state = 185
                                self.expr(0)
                                self.state = 190
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 193
                        self.match(YAPL2Parser.T__5)
                        pass

             
                self.state = 198
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


